--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
       maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
-      classpath "com.github.jengelman.gradle.plugins:shadow:6.0.0"
+      classpath "com.github.johnrengelman:shadow:8.1.1"
       classpath "com.bertramlabs.plugins:asset-pipeline-gradle:$assetPipelineVersion"
   }
 }
@@ -39,7 +39,7 @@ dependencies {
 jar {
 	manifest {
 		attributes(
-			'Plugin-Class': 'com.morpheusdata.support.ExampleOptionSourcePlugin',
+			'Plugin-Class': 'com.morpheusdata.support.AzureOptionSourcePlugin',
 			'Plugin-Version': version,
 		)
 	}
